# marketing-ai-iv-consulting

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy.yml
sessions/: 2026-07-03_001.md
web/: __main__.py  app.py  db.py  hypothesis.py  seed.py
web/static/app/: style.css
web/templates/app/: aeo.html  base.html  board.html  dashboard.html  node.html
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/src/: content.config.ts
website/src/content/research/: float-and-stock-revenue.md  owners-manual.md  shareholder-letters.md
website/src/data/: company.ts
website/src/layouts/: Base.astro
website/src/pages/: about.astro  faq.astro  index.astro  services.astro
website/src/pages/research/: [slug].astro  index.astro
website/src/styles/: global.css
