[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketing-ai-iv-consulting"
version = "0.1.0"
description = "Marketing AI platform for IV Consulting"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
iv-consulting = "web.app:main"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
